[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/deadfrog/Deadfrog Personal Use Only.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/PauseScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.721569 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 115.0
margin_bottom = 175.0
custom_colors/font_color = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="Buttons" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -51.0
margin_right = 130.0
margin_bottom = 51.0

[node name="Resume" type="Button" parent="Buttons"]
pause_mode = 2
margin_left = -33.0
margin_top = -6.0
margin_right = 294.0
margin_bottom = 43.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Resume"

[node name="Main_Menu" type="Button" parent="Buttons"]
pause_mode = 2
margin_left = -33.0
margin_top = 65.0
margin_right = 294.0
margin_bottom = 114.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.227451, 0.14902, 1 )
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "MAIN MENU"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Main_Menu" to="." method="_on_Main_Menu_pressed"]
